Fix text errors, update email, and remove Maritime Hackathon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Yao Xiang, Computer Engineering student at NUS specializing in AI, hardware, and software development.">
     <meta name="keywords" content="Yao Xiang, Computer Engineering, NUS, AI, Python, JavaScript, Verilog, Arduino, Helper Tools, Wingman">
     <title>Yao Xiang - Computer Engineering Student</title>
@@ -28,7 +30,7 @@
             <p>Aspiring Computer Engineer with a strong passion for machine learning, hardware-software integration, and full-stack development. Proven ability to build efficient automation tools and AI-powered applications. Fluent in English and Chinese, and adaptable to new environments. Eager to leverage academic foundations in a professional workspace to drive technological innovation.</p>
             <div style="margin-top: 20px;">
                 <a href="#contact" class="cta-button" style="margin-right: 15px;">Get In Touch</a>
-                <a href="resume_2.0.html" class="cta-button" style="background-color: transparent; border: 2px solid #ff4444;">View Resume</a>
+                <a href="resume.html" class="cta-button" style="background-color: transparent; border: 2px solid #ff4444;">View Resume</a>
             </div>
         </div>
     </section>
@@ -36,7 +38,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I'm a Year 2 Computer Engineering student (Minor in AI) at the National University of Singapore, passionate about creating innovative solutions that combine hardware and software. My expertise spans from Verilog and Arduino for embedded systems to Python, Java, JavaScript, and TypeScript for modern applications.</p>
+            <p>I'm a Year 2 Computer Engineering student (Minor in AI) at the National University of Singapore, passionate about creating innovative solutions that combine hardware and software. My expertise spans from Verilog, C/C++, and Arduino for embedded systems to Python, Java, JavaScript, and TypeScript for modern applications.</p>
             <p>Currently developing Helper Tools (high-performance CLI utilities for developers) and Wingman (Electron-based AI assistant desktop app).</p>
         </div>
     </section>
@@ -45,20 +47,13 @@
         <div class="container">
             <h2>Featured Projects</h2>
             <div class="project-grid">
-                <div class="project-card">
-                    <h3>⚓ Maritime Hackathon 2026</h3>
-                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Hackathon Project (In Progress)</strong></p>
-                    <p>Currently developing an innovative solution for the maritime industry.</p>
-                    <div style="margin-top: 15px;">
-                        <a href="https://github.com/Yxiang-828/Maritime-Hackthon-2026" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
-                    </div>
-                </div>
+
                 <div class="project-card">
                     <h3>💡 Hack4Good 2026</h3>
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Hackathon Project</strong></p>
                     <p>Project developed for Hack4Good 2026. Check GitHub for latest updates and source code.</p>
                     <div style="margin-top: 15px;">
-                        <a href="https://github.com/Yxiang-828/Hack4Good2026" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Hack4Good2026" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -67,7 +62,7 @@
                     <p>Electron-based AI assistant desktop app. <strong>Electron + React + TypeScript + Python</strong>. Features AI integration, task management, cross-platform support.</p>
                     <div style="margin-top: 15px;">
                         <a href="wingman.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -75,7 +70,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>HacX 2025 Hackathon Project</strong></p>
                     <p><strong>Python + Raspberry Pi + CARLA</strong>. Non-destructive prototype to halt hostile autonomous vehicles by disrupting LiDAR and camera sensors. Validated with 15m range field tests.</p>
                     <div style="margin-top: 15px;">
-                        <a href="https://github.com/Yxiang-828/HacX-AV-Sensor-Disruptor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/HacX-AV-Sensor-Disruptor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -83,7 +78,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>EE2026 Scientific Calculator</strong></p>
                     <p><strong>Verilog + Vivado + Basys 3</strong>. Scientific calculator & grapher. Features Newton-Raphson root finder and Q22.14 fixed-point arithmetic.</p>
                     <div style="margin-top: 15px;">
-                        <a href="https://github.com/Yxiang-828/EE2026-Project-Vivado" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/EE2026-Project-Vivado" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -92,7 +87,7 @@
                     <p><strong>Java + JUnit + Gradle</strong>. Keyboard-optimized CLI task manager. Features advanced filtering, sorting, and CI/CD with GitHub Actions.</p>
                     <div style="margin-top: 15px;">
                         <a href="https://ay2526s1-cs2113-w13-2.github.io/tp/" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Docs</a>
-                        <a href="https://github.com/AY2526S1-CS2113-W13-2/tp" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/AY2526S1-CS2113-W13-2/tp" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -102,7 +97,7 @@
                     <p><strong>Real-ESRGAN + EDSR AI models</strong>. GPU-accelerated (2-5s/image). 4x quality boost. AMD Vulkan optimized.</p>
                     <div style="margin-top: 15px;">
                         <a href="image-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/image_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/image_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -111,7 +106,7 @@
                     <p><strong>Real-ESRGAN + FFmpeg</strong>. Frame-by-frame AI upscaling (4x resolution). AMD hardware encoding with CPU fallback.</p>
                     <div style="margin-top: 15px;">
                         <a href="video-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/video_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/video_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -120,7 +115,7 @@
                     <p><strong>MoviePy + Pillow</strong>. Exact size constraints (1-50MB). Speed control (0.1x-2.0x). Auto-resolution scaling.</p>
                     <div style="margin-top: 15px;">
                         <a href="video-to-gif.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video_to_GIF_Converter" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video_to_GIF_Converter" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -129,7 +124,7 @@
                     <p><strong>Whisper (ONNX) + DirectML</strong>. AMD GPU acceleration. Processes long audio (30+ min). 3-5x faster than CPU.</p>
                     <div style="margin-top: 15px;">
                         <a href="audio-transcriber.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -138,7 +133,7 @@
                     <p><strong>FFmpeg CLI wrapper</strong>. Extracts embedded SRT subtitles. Falls back to MP3 audio extraction.</p>
                     <div style="margin-top: 15px;">
                         <a href="subtitle-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -147,7 +142,7 @@
                     <p><strong>.NET APIs + PowerShell</strong>. 95K+ files/sec on HDD. Min-heap top-K algorithm. 16-50x faster than Get-ChildItem.</p>
                     <div style="margin-top: 15px;">
                         <a href="file-scanner.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/File_Scanner" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/File_Scanner" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -156,7 +151,7 @@
                     <p><strong>UnityPy + PIL</strong>. Extracts Texture2D/Sprite assets from .unity3d bundles. Batch processing, PNG conversion.</p>
                     <div style="margin-top: 15px;">
                         <a href="unity-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
-                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
             </div>
@@ -245,7 +240,7 @@
             <h2>Get In Touch</h2>
             <p>I'm always open to discussing new opportunities, interesting projects, or just having a chat about fun, anime & AI!</p>
             <div class="contact-info">
-                <p><strong>Email:</strong> xiangyao888@gmail.com</p>
+                <p><strong>Personal Email:</strong> dinosaur17013@gmail.com</p>
                 <p><strong>Website:</strong> <a href="https://yxiang-828.github.io/" target="_blank">yxiang-828.github.io</a></p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/Yxiang-828" target="_blank">github.com/Yxiang-828</a></p>
                 <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yao-xiang-733b06329/" target="_blank">linkedin.com/in/yao-xiang-733b06329</a></p>
@@ -259,6 +254,14 @@
         </div>
     </footer>
 
-    <script src="script.js?v=2"></script>
+    <!-- Holo Companion -->
+    <div id="holo-container" onclick="holoInteract(this)">
+        <div class="holo-dialog-box">
+            <p id="holo-text">Traveler...</p>
+        </div>
+        <img src="images/holo.png" alt="Holo" class="holo-sprite">
+    </div>
+
+    <script src="script.js?v=4"></script>
 </body>
 </html>
