--- a/unity-extractor.html
+++ b/unity-extractor.html
@@ -6,21 +6,21 @@
     <title>Unity Image Extractor - Yao Xiang</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        .detail-container { max-width: 1200px; margin: 100px auto 50px; padding: 50px; background: rgba(15, 15, 35, 0.9); border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); }
-        .back-link { display: inline-block; margin-bottom: 30px; color: #00d4ff; text-decoration: none; font-weight: bold; transition: all 0.3s; }
+        .detail-container { max-width: 1200px; margin: 100px auto 50px; padding: 50px; background: rgba(20, 5, 5, 0.9); border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); }
+        .back-link { display: inline-block; margin-bottom: 30px; color: #ff4444; text-decoration: none; font-weight: bold; transition: all 0.3s; }
         .back-link:hover { transform: translateX(-5px); }
         .tech-stack { display: flex; flex-wrap: wrap; gap: 10px; margin: 20px 0; }
-        .tech-badge { background: linear-gradient(45deg, #00d4ff, #090979); color: white; padding: 8px 16px; border-radius: 20px; font-size: 0.9rem; font-weight: bold; }
+        .tech-badge { background: linear-gradient(45deg, #ff4444, #8b0000); color: white; padding: 8px 16px; border-radius: 20px; font-size: 0.9rem; font-weight: bold; }
         .feature-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 30px 0; }
-        .feature-box { background: rgba(0, 212, 255, 0.05); padding: 20px; border-radius: 10px; border-left: 3px solid #00d4ff; }
+        .feature-box { background: rgba(255, 68, 68, 0.05); padding: 20px; border-radius: 10px; border-left: 3px solid #ff4444; }
         .alert-box { background: rgba(255, 107, 107, 0.1); border-left: 4px solid #ff6b6b; padding: 20px; margin: 20px 0; border-radius: 8px; }
         code { background: rgba(0,0,0,0.4); padding: 3px 8px; border-radius: 4px; color: #ff6b6b; font-family: 'Courier New', monospace; }
-        pre { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; overflow-x: auto; border-left: 3px solid #00d4ff; }
+        pre { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; overflow-x: auto; border-left: 3px solid #ff4444; }
         pre code { background: none; padding: 0; color: #e0e0e0; }
-        .section-title { color: #00d4ff; margin-top: 50px; padding-bottom: 10px; border-bottom: 2px solid rgba(0, 212, 255, 0.3); }
-        .flow-diagram { background: rgba(0,0,0,0.4); padding: 30px; border-radius: 10px; margin: 20px 0; border: 1px solid rgba(0, 212, 255, 0.3); }
-        .flow-step { background: rgba(0, 212, 255, 0.1); padding: 15px 20px; border-radius: 8px; margin: 10px 0; border-left: 3px solid #00d4ff; position: relative; }
-        .flow-arrow { text-align: center; color: #00d4ff; font-size: 1.5rem; margin: 5px 0; }
+        .section-title { color: #ff4444; margin-top: 50px; padding-bottom: 10px; border-bottom: 2px solid rgba(255, 68, 68, 0.3); }
+        .flow-diagram { background: rgba(0,0,0,0.4); padding: 30px; border-radius: 10px; margin: 20px 0; border: 1px solid rgba(255, 68, 68, 0.3); }
+        .flow-step { background: rgba(255, 68, 68, 0.1); padding: 15px 20px; border-radius: 8px; margin: 10px 0; border-left: 3px solid #ff4444; position: relative; }
+        .flow-arrow { text-align: center; color: #ff4444; font-size: 1.5rem; margin: 5px 0; }
     </style>
 </head>
 <body>
@@ -40,7 +40,7 @@
     <div class="detail-container">
         <a href="index.html#projects" class="back-link">← Back to Projects</a>
         
-        <h1 style="color: #00d4ff; margin-bottom: 20px;">🎮 Unity Image Extractor</h1>
+        <h1 style="color: #ff4444; margin-bottom: 20px;">🎮 Unity Image Extractor</h1>
         
         <div class="tech-stack">
             <span class="tech-badge">UnityPy</span>
@@ -68,32 +68,32 @@
         <h2 class="section-title">🔄 How It Works: Processing Pipeline</h2>
         <div class="flow-diagram">
             <div class="flow-step">
-                <strong style="color: #00d4ff;">1. Input Detection</strong>
+                <strong style="color: #ff4444;">1. Input Detection</strong>
                 <p style="color: #b0b0b0; margin: 10px 0 0 0;">Accepts Unity3D file or directory path. With <code>-r</code> flag, recursively scans for .unity3d, .bundle, .assets files</p>
             </div>
             <div class="flow-arrow">↓</div>
             <div class="flow-step">
-                <strong style="color: #00d4ff;">2. UnityFS Signature Check</strong>
+                <strong style="color: #ff4444;">2. UnityFS Signature Check</strong>
                 <p style="color: #b0b0b0; margin: 10px 0 0 0;">Validates file header for UnityFS magic bytes (0x55 0x6E 0x69 0x74 0x79 0x46 0x53). Skips non-Unity files automatically</p>
             </div>
             <div class="flow-arrow">↓</div>
             <div class="flow-step">
-                <strong style="color: #00d4ff;">3. Bundle Extraction</strong>
+                <strong style="color: #ff4444;">3. Bundle Extraction</strong>
                 <p style="color: #b0b0b0; margin: 10px 0 0 0;">UnityPy decompresses bundle data (LZ4/LZMA), parses type tree, and loads object containers</p>
             </div>
             <div class="flow-arrow">↓</div>
             <div class="flow-step">
-                <strong style="color: #00d4ff;">4. Asset Scanning</strong>
+                <strong style="color: #ff4444;">4. Asset Scanning</strong>
                 <p style="color: #b0b0b0; margin: 10px 0 0 0;">Iterates through all objects, filters for Texture2D and Sprite types, extracts image data and metadata (dimensions, format)</p>
             </div>
             <div class="flow-arrow">↓</div>
             <div class="flow-step">
-                <strong style="color: #00d4ff;">5. PNG Conversion</strong>
+                <strong style="color: #ff4444;">5. PNG Conversion</strong>
                 <p style="color: #b0b0b0; margin: 10px 0 0 0;">Pillow converts raw pixel data to PNG format with proper color channels. Maintains transparency (RGBA) for sprites</p>
             </div>
             <div class="flow-arrow">↓</div>
             <div class="flow-step">
-                <strong style="color: #00d4ff;">6. Organized Output</strong>
+                <strong style="color: #ff4444;">6. Organized Output</strong>
                 <p style="color: #b0b0b0; margin: 10px 0 0 0;">Saves to <code>extracted_images/</code> directory with structure mirroring source. Example: <code>source/characters/hero.unity3d</code> → <code>extracted_images/characters/hero_texture1.png</code></p>
             </div>
         </div>
@@ -101,19 +101,19 @@
         <h2 class="section-title">🔧 My Implementation</h2>
         <div class="feature-grid">
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Intelligent File Detection</h3>
+                <h3 style="color: #ff4444;">Intelligent File Detection</h3>
                 <p style="color: #b0b0b0;">My code automatically identifies Unity bundle files by signature, not extension - handles renamed or obfuscated files</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Recursive Directory Processing</h3>
+                <h3 style="color: #ff4444;">Recursive Directory Processing</h3>
                 <p style="color: #b0b0b0;">I built the <code>-r</code> flag to traverse entire game folders, processing 500+ files while maintaining source organization</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Custom Output Paths</h3>
+                <h3 style="color: #ff4444;">Custom Output Paths</h3>
                 <p style="color: #b0b0b0;">My <code>-o</code> parameter allows flexible output destinations, useful for batch processing multiple games to separate folders</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">CLI Automation Ready</h3>
+                <h3 style="color: #ff4444;">CLI Automation Ready</h3>
                 <p style="color: #b0b0b0;">I designed the interface for scripting - no interactive prompts, clean exit codes, perfect for batch files or automated workflows</p>
             </div>
         </div>
@@ -166,9 +166,20 @@
         </div>
 
         <div style="text-align: center; margin-top: 50px;">
-            <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank" class="cta-button">View on GitHub →</a>
+            <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank" class="cta-button">View Repo</a>
         </div>
     </div>
     <footer><div class="container"><p>&copy; 2025 Yao Xiang. All rights reserved.</p></div></footer>
+
+    <!-- Holo Companion -->
+    <div id="holo-container" onclick="holoInteract(this)">
+        <div class="holo-dialog-box">
+            <p id="holo-text">Traveler...</p>
+        </div>
+        <img src="images/holo.png" alt="Holo" class="holo-sprite">
+    </div>
+
+    <script src="script.js?v=4"></script>
 </body>
+
 </html>
