--- a/wingman_old.html
+++ b/wingman_old.html
@@ -198,7 +198,7 @@ python -m uvicorn app.main:app --reload
 python -m uvicorn app.main:app --reload --host 0.0.0.0 --port 8000</code></pre>
 
         <div style="text-align: center; margin-top: 50px;">
-            <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="margin-right: 20px;">View on GitHub →</a>
+            <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="margin-right: 20px;">View Repo</a>
             <a href="https://github.com/Yxiang-828/Wingman/releases" target="_blank" class="cta-button">Download Latest Release →</a>
         </div>
     </div>
