--- a/audio-transcriber.html
+++ b/audio-transcriber.html
@@ -6,21 +6,21 @@
     <title>Audio Transcriber - Yao Xiang</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        .detail-container { max-width: 1200px; margin: 100px auto 50px; padding: 50px; background: rgba(15, 15, 35, 0.9); border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); }
-        .back-link { display: inline-block; margin-bottom: 30px; color: #00d4ff; text-decoration: none; font-weight: bold; transition: all 0.3s; }
+        .detail-container { max-width: 1200px; margin: 100px auto 50px; padding: 50px; background: rgba(20, 5, 5, 0.9); border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); }
+        .back-link { display: inline-block; margin-bottom: 30px; color: #ff4444; text-decoration: none; font-weight: bold; transition: all 0.3s; }
         .back-link:hover { transform: translateX(-5px); }
         .tech-stack { display: flex; flex-wrap: wrap; gap: 10px; margin: 20px 0; }
-        .tech-badge { background: linear-gradient(45deg, #00d4ff, #090979); color: white; padding: 8px 16px; border-radius: 20px; font-size: 0.9rem; font-weight: bold; }
+        .tech-badge { background: linear-gradient(45deg, #ff4444, #8b0000); color: white; padding: 8px 16px; border-radius: 20px; font-size: 0.9rem; font-weight: bold; }
         .perf-table { width: 100%; margin: 30px 0; border-collapse: collapse; }
         .perf-table th, .perf-table td { padding: 15px; text-align: left; border-bottom: 1px solid rgba(255,255,255,0.1); }
-        .perf-table th { background: rgba(0, 212, 255, 0.1); color: #00d4ff; }
+        .perf-table th { background: rgba(255, 68, 68, 0.1); color: #ff4444; }
         .alert-box { background: rgba(255, 107, 107, 0.1); border-left: 4px solid #ff6b6b; padding: 20px; margin: 20px 0; border-radius: 8px; }
         .feature-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 30px 0; }
-        .feature-box { background: rgba(0, 212, 255, 0.05); padding: 20px; border-radius: 10px; border-left: 3px solid #00d4ff; }
+        .feature-box { background: rgba(255, 68, 68, 0.05); padding: 20px; border-radius: 10px; border-left: 3px solid #ff4444; }
         code { background: rgba(0,0,0,0.4); padding: 3px 8px; border-radius: 4px; color: #ff6b6b; font-family: 'Courier New', monospace; }
-        pre { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; overflow-x: auto; border-left: 3px solid #00d4ff; }
+        pre { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; overflow-x: auto; border-left: 3px solid #ff4444; }
         pre code { background: none; padding: 0; color: #e0e0e0; }
-        .section-title { color: #00d4ff; margin-top: 50px; padding-bottom: 10px; border-bottom: 2px solid rgba(0, 212, 255, 0.3); }
+        .section-title { color: #ff4444; margin-top: 50px; padding-bottom: 10px; border-bottom: 2px solid rgba(255, 68, 68, 0.3); }
     </style>
 </head>
 <body>
@@ -41,7 +41,7 @@
     <div class="detail-container">
         <a href="index.html#projects" class="back-link">← Back to Projects</a>
         
-        <h1 style="color: #00d4ff; margin-bottom: 20px;">🎤 Audio to Text Transcriber</h1>
+        <h1 style="color: #ff4444; margin-bottom: 20px;">🎤 Audio to Text Transcriber</h1>
         
         <div class="tech-stack">
             <span class="tech-badge">Whisper AI</span>
@@ -76,27 +76,27 @@
         <h2 class="section-title">🔧 My Implementation</h2>
         <div class="feature-grid">
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Custom Chunking Pipeline</h3>
+                <h3 style="color: #ff4444;">Custom Chunking Pipeline</h3>
                 <p style="color: #b0b0b0;">I engineered a 30-second audio segmentation system that overcomes Whisper's token limits, enabling full transcription of 20+ minute files</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">GPU Memory Management</h3>
+                <h3 style="color: #ff4444;">GPU Memory Management</h3>
                 <p style="color: #b0b0b0;">I wrote explicit tensor-to-device transfers (<code>input_features.to(device)</code>) to force GPU utilization, reducing CPU load from 70% to 20-30%</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">ONNX Conversion Layer</h3>
+                <h3 style="color: #ff4444;">ONNX Conversion Layer</h3>
                 <p style="color: #b0b0b0;">My code automatically converts Whisper models to ONNX format on first run, then caches them for 5-10x faster subsequent executions</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Real-Time Progress System</h3>
+                <h3 style="color: #ff4444;">Real-Time Progress System</h3>
                 <p style="color: #b0b0b0;">I built a custom progress bar with per-chunk timing analytics, displaying real-time factor and GPU confirmation</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Automated Setup Script</h3>
+                <h3 style="color: #ff4444;">Automated Setup Script</h3>
                 <p style="color: #b0b0b0;">I created <code>setup.bat</code> that validates Python version, installs DirectML dependencies, and verifies GPU acceleration in one command</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Error Handling & Fallbacks</h3>
+                <h3 style="color: #ff4444;">Error Handling & Fallbacks</h3>
                 <p style="color: #b0b0b0;">My pipeline gracefully handles missing GPUs, corrupted audio, and model download failures with detailed error messages</p>
             </div>
         </div>
@@ -136,7 +136,7 @@
                     <td>10-20 sec</td>
                     <td><strong>3-5 sec</strong></td>
                     <td>~2GB</td>
-                    <td><span style="color: #00d4ff;">Recommended</span></td>
+                    <td><span style="color: #ff4444;">Recommended</span></td>
                 </tr>
                 <tr>
                     <td><strong>small</strong></td>
@@ -250,10 +250,21 @@ py -m pip install onnxruntime-directml --force-reinstall</code></pre>
         </ul>
 
         <div style="text-align: center; margin-top: 50px;">
-            <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank" class="cta-button">View on GitHub →</a>
+            <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank" class="cta-button">View Repo</a>
         </div>
     </div>
 
     <footer><div class="container"><p>&copy; 2025 Yao Xiang. All rights reserved.</p></div></footer>
+
+    <!-- Holo Companion -->
+    <div id="holo-container" onclick="holoInteract(this)">
+        <div class="holo-dialog-box">
+            <p id="holo-text">Traveler...</p>
+        </div>
+        <img src="images/holo.png" alt="Holo" class="holo-sprite">
+    </div>
+
+    <script src="script.js?v=4"></script>
 </body>
+
 </html>
