--- a/subtitle-extractor.html
+++ b/subtitle-extractor.html
@@ -6,20 +6,20 @@
     <title>Subtitle/MP3 Extractor - Yao Xiang</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        .detail-container { max-width: 1200px; margin: 100px auto 50px; padding: 50px; background: rgba(15, 15, 35, 0.9); border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); }
-        .back-link { display: inline-block; margin-bottom: 30px; color: #00d4ff; text-decoration: none; font-weight: bold; transition: all 0.3s; }
+        .detail-container { max-width: 1200px; margin: 100px auto 50px; padding: 50px; background: rgba(20, 5, 5, 0.9); border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); }
+        .back-link { display: inline-block; margin-bottom: 30px; color: #ff4444; text-decoration: none; font-weight: bold; transition: all 0.3s; }
         .back-link:hover { transform: translateX(-5px); }
         .tech-stack { display: flex; flex-wrap: wrap; gap: 10px; margin: 20px 0; }
-        .tech-badge { background: linear-gradient(45deg, #00d4ff, #090979); color: white; padding: 8px 16px; border-radius: 20px; font-size: 0.9rem; font-weight: bold; }
+        .tech-badge { background: linear-gradient(45deg, #ff4444, #8b0000); color: white; padding: 8px 16px; border-radius: 20px; font-size: 0.9rem; font-weight: bold; }
         .feature-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 30px 0; }
-        .feature-box { background: rgba(0, 212, 255, 0.05); padding: 20px; border-radius: 10px; border-left: 3px solid #00d4ff; }
-        .workflow { background: rgba(0, 212, 255, 0.05); padding: 30px; border-radius: 10px; margin: 30px 0; }
+        .feature-box { background: rgba(255, 68, 68, 0.05); padding: 20px; border-radius: 10px; border-left: 3px solid #ff4444; }
+        .workflow { background: rgba(255, 68, 68, 0.05); padding: 30px; border-radius: 10px; margin: 30px 0; }
         .step { display: flex; align-items: center; margin: 20px 0; }
-        .step-number { background: #00d4ff; color: #0a0a20; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 1.2rem; margin-right: 20px; flex-shrink: 0; }
+        .step-number { background: #ff4444; color: #0a0a20; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 1.2rem; margin-right: 20px; flex-shrink: 0; }
         code { background: rgba(0,0,0,0.4); padding: 3px 8px; border-radius: 4px; color: #ff6b6b; font-family: 'Courier New', monospace; }
-        pre { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; overflow-x: auto; border-left: 3px solid #00d4ff; }
+        pre { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; overflow-x: auto; border-left: 3px solid #ff4444; }
         pre code { background: none; padding: 0; color: #e0e0e0; }
-        .section-title { color: #00d4ff; margin-top: 50px; padding-bottom: 10px; border-bottom: 2px solid rgba(0, 212, 255, 0.3); }
+        .section-title { color: #ff4444; margin-top: 50px; padding-bottom: 10px; border-bottom: 2px solid rgba(255, 68, 68, 0.3); }
     </style>
 </head>
 <body>
@@ -40,7 +40,7 @@
     <div class="detail-container">
         <a href="index.html#projects" class="back-link">← Back to Projects</a>
         
-        <h1 style="color: #00d4ff; margin-bottom: 20px;">📝 Subtitle & MP3 Extractor</h1>
+        <h1 style="color: #ff4444; margin-bottom: 20px;">📝 Subtitle & MP3 Extractor</h1>
         
         <div class="tech-stack">
             <span class="tech-badge">FFmpeg</span>
@@ -67,28 +67,28 @@
             <div class="step">
                 <div class="step-number">1</div>
                 <div style="color: #b0b0b0;">
-                    <strong style="color: #00d4ff;">Subtitle Stream Detection</strong><br>
+                    <strong style="color: #ff4444;">Subtitle Stream Detection</strong><br>
                     I wrote code to probe video metadata using FFmpeg, parsing stream types to identify subtitle tracks
                 </div>
             </div>
             <div class="step">
                 <div class="step-number">2</div>
                 <div style="color: #b0b0b0;">
-                    <strong style="color: #00d4ff;">Conditional Extraction</strong><br>
+                    <strong style="color: #ff4444;">Conditional Extraction</strong><br>
                     My pipeline extracts SRT subtitles if found → Outputs to <code>extracted_captions/</code>
                 </div>
             </div>
             <div class="step">
                 <div class="step-number">3</div>
                 <div style="color: #b0b0b0;">
-                    <strong style="color: #00d4ff;">Intelligent Fallback I Designed</strong><br>
+                    <strong style="color: #ff4444;">Intelligent Fallback I Designed</strong><br>
                     If no subtitles exist, my code automatically pivots to MP3 extraction @ 192kbps → Outputs to <code>extracted_audio/</code>
                 </div>
             </div>
             <div class="step">
                 <div class="step-number">4</div>
                 <div style="color: #b0b0b0;">
-                    <strong style="color: #00d4ff;">Guaranteed Output Philosophy</strong><br>
+                    <strong style="color: #ff4444;">Guaranteed Output Philosophy</strong><br>
                     My error handling ensures the script <strong>never exits empty</strong> - you always get either subtitles OR audio
                 </div>
             </div>
@@ -97,19 +97,19 @@
         <h2 class="section-title">💡 Why I Built This</h2>
         <div class="feature-grid">
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Problem I Solved</h3>
+                <h3 style="color: #ff4444;">Problem I Solved</h3>
                 <p style="color: #b0b0b0;">FFmpeg alone requires knowing if subtitles exist beforehand. My wrapper handles detection and decision-making automatically</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">My Fallback Architecture</h3>
+                <h3 style="color: #ff4444;">My Fallback Architecture</h3>
                 <p style="color: #b0b0b0;">I implemented try-except logic: attempt subtitle extraction → if fails → extract audio instead</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">UX Design Choice</h3>
+                <h3 style="color: #ff4444;">UX Design Choice</h3>
                 <p style="color: #b0b0b0;">I created drag-and-drop batch files for non-technical users - no command-line knowledge required</p>
             </div>
             <div class="feature-box">
-                <h3 style="color: #00d4ff;">Output Organization I Designed</h3>
+                <h3 style="color: #ff4444;">Output Organization I Designed</h3>
                 <p style="color: #b0b0b0;">My code creates separate directories (<code>extracted_captions/</code> vs <code>extracted_audio/</code>) for easy file management</p>
             </div>
         </div>
@@ -151,10 +151,21 @@
         </ul>
 
         <div style="text-align: center; margin-top: 50px;">
-            <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank" class="cta-button">View on GitHub →</a>
+            <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank" class="cta-button">View Repo</a>
         </div>
     </div>
 
     <footer><div class="container"><p>&copy; 2025 Yao Xiang. All rights reserved.</p></div></footer>
+
+    <!-- Holo Companion -->
+    <div id="holo-container" onclick="holoInteract(this)">
+        <div class="holo-dialog-box">
+            <p id="holo-text">Traveler...</p>
+        </div>
+        <img src="images/holo.png" alt="Holo" class="holo-sprite">
+    </div>
+
+    <script src="script.js?v=4"></script>
 </body>
+
 </html>
