--- a/wingman_backup.html
+++ b/wingman_backup.html
@@ -324,7 +324,7 @@ ollama run "deepseek-r1:7b"
         <p style="color: #b0b0b0;">If port 8080 is busy, the app will automatically find an available port.</p>
 
         <div style="text-align: center; margin-top: 50px;">
-            <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="margin-right: 20px;">View on GitHub →</a>
+            <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="margin-right: 20px;">View Repo</a>
             <a href="https://github.com/Yxiang-828/Wingman/releases" target="_blank" class="cta-button">Download Latest Release →</a>
         </div>
     </div>
