Fix script path, holo dialog size, organize project files

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Team Project - NUS Orbital Apollo 2025</strong></p>
                     <p>Electron-based AI assistant desktop app. <strong>Electron + React + TypeScript + Python</strong>. Features AI integration, task management, cross-platform support.</p>
                     <div style="margin-top: 15px;">
-                        <a href="wingman.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/wingman.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <img src="https://raw.githubusercontent.com/Yxiang-828/Helper_Tools/main/image_upscaler/samples/realesrgan_1.png" alt="Image Upscaler Comparison" loading="lazy">
                     <p><strong>Real-ESRGAN + EDSR AI models</strong>. GPU-accelerated (2-5s/image). 4x quality boost. AMD Vulkan optimized.</p>
                     <div style="margin-top: 15px;">
-                        <a href="image-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/image-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/image_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>Real-ESRGAN + FFmpeg</strong>. Frame-by-frame AI upscaling (4x resolution). AMD hardware encoding with CPU fallback.</p>
                     <div style="margin-top: 15px;">
-                        <a href="video-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/video-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/video_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>MoviePy + Pillow</strong>. Exact size constraints (1-50MB). Speed control (0.1x-2.0x). Auto-resolution scaling.</p>
                     <div style="margin-top: 15px;">
-                        <a href="video-to-gif.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/video-to-gif.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video_to_GIF_Converter" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>Whisper (ONNX) + DirectML</strong>. AMD GPU acceleration. Processes long audio (30+ min). 3-5x faster than CPU.</p>
                     <div style="margin-top: 15px;">
-                        <a href="audio-transcriber.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/audio-transcriber.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>FFmpeg CLI wrapper</strong>. Extracts embedded SRT subtitles. Falls back to MP3 audio extraction.</p>
                     <div style="margin-top: 15px;">
-                        <a href="subtitle-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/subtitle-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>.NET APIs + PowerShell</strong>. 95K+ files/sec on HDD. Min-heap top-K algorithm. 16-50x faster than Get-ChildItem.</p>
                     <div style="margin-top: 15px;">
-                        <a href="file-scanner.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/file-scanner.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/File_Scanner" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>UnityPy + PIL</strong>. Extracts Texture2D/Sprite assets from .unity3d bundles. Batch processing, PNG conversion.</p>
                     <div style="margin-top: 15px;">
-                        <a href="unity-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="projects/unity-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">View Repo</a>
                     </div>
                 </div>
