--- a/projects/file-scanner.html
+++ b/projects/file-scanner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Scanner - Yao Xiang</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <style>
         .project-detail { max-width: 1200px; margin: 100px auto 50px; padding: 40px; background: rgba(20, 5, 5, 0.8); border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); }
         .back-link { display: inline-block; margin-bottom: 30px; color: #ff4444; text-decoration: none; font-weight: bold; transition: all 0.3s; }
@@ -22,19 +22,19 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1><a href="index.html" style="color: inherit; text-decoration: none;">Yao Xiang</a></h1>
+                <h1><a href="../index.html" style="color: inherit; text-decoration: none;">Yao Xiang</a></h1>
                 <ul>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="index.html#skills">Skills</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="../index.html#about">About</a></li>
+                    <li><a href="../index.html#projects">Projects</a></li>
+                    <li><a href="../index.html#skills">Skills</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <div class="project-detail">
-        <a href="index.html#projects" class="back-link">← Back to Projects</a>
+        <a href="../index.html#projects" class="back-link">← Back to Projects</a>
         
         <h1 style="color: #ff4444; margin-bottom: 20px;">🔍 File Scanner</h1>
         
@@ -197,10 +197,10 @@ while ($queue.Count -gt 0) {
         <div class="holo-dialog-box">
             <p id="holo-text">Traveler...</p>
         </div>
-        <img src="images/holo.png" alt="Holo" class="holo-sprite">
+        <img src="../images/holo.png" alt="Holo" class="holo-sprite">
     </div>
 
-    <script src="script.js?v=4"></script>
+    <script src="../script.js?v=4"></script>
 </body>
 
 </html>
