--- a/projects/image-upscaler.html
+++ b/projects/image-upscaler.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Upscaler - Yao Xiang</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <style>
         .project-detail {
             max-width: 1200px;
@@ -93,19 +93,19 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1><a href="index.html" style="color: inherit; text-decoration: none;">Yao Xiang</a></h1>
+                <h1><a href="../index.html" style="color: inherit; text-decoration: none;">Yao Xiang</a></h1>
                 <ul>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="index.html#skills">Skills</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="../index.html#about">About</a></li>
+                    <li><a href="../index.html#projects">Projects</a></li>
+                    <li><a href="../index.html#skills">Skills</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <div class="project-detail">
-        <a href="index.html#projects" class="back-link">← Back to Projects</a>
+        <a href="../index.html#projects" class="back-link">← Back to Projects</a>
         
         <h1 style="color: #ff4444; margin-bottom: 20px;">🎨 AI Image Upscaler</h1>
         
@@ -298,10 +298,10 @@ Choose scale (2, 3, or 4): 4
         <div class="holo-dialog-box">
             <p id="holo-text">Traveler...</p>
         </div>
-        <img src="images/holo.png" alt="Holo" class="holo-sprite">
+        <img src="../images/holo.png" alt="Holo" class="holo-sprite">
     </div>
 
-    <script src="script.js?v=4"></script>
+    <script src="../script.js?v=4"></script>
 </body>
 
 </html>
