--- a/projects/wingman.html
+++ b/projects/wingman.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wingman - Yao Xiang</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
     <script>
         mermaid.initialize({ 
@@ -53,19 +53,19 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1><a href="index.html" style="color: inherit; text-decoration: none;">Yao Xiang</a></h1>
+                <h1><a href="../index.html" style="color: inherit; text-decoration: none;">Yao Xiang</a></h1>
                 <ul>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="index.html#skills">Skills</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="../index.html#about">About</a></li>
+                    <li><a href="../index.html#projects">Projects</a></li>
+                    <li><a href="../index.html#skills">Skills</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <div class="detail-container">
-        <a href="index.html#projects" class="back-link">← Back to Projects</a>
+        <a href="../index.html#projects" class="back-link">← Back to Projects</a>
 
         <h1 style="color: #ff4444; margin-bottom: 20px;">🤖 Wingman</h1>
 
@@ -511,10 +511,10 @@ pip install -r requirements.txt --force-reinstall</code></pre>
         <div class="holo-dialog-box">
             <p id="holo-text">Traveler...</p>
         </div>
-        <img src="images/holo.png" alt="Holo" class="holo-sprite">
+        <img src="../images/holo.png" alt="Holo" class="holo-sprite">
     </div>
 
-    <script src="script.js?v=4"></script>
+    <script src="../script.js?v=4"></script>
 </body>
 
 </html>
