--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
                 <div class="skill-category">
                     <h3>Relevant Coursework</h3>
                     <ul>
+                        <li>Eng Principles & Practices I (CG1111A)</li>
+                        <li>Eng Principles & Practices II (CG2111A)</li>
                         <li>Software Engineering (CS2113)</li>
                         <li>Data Structures & Algos (CS2040C)</li>
                         <li>Machine Learning (EE2211)</li>
