--- a/projects/audio-transcriber.html
+++ b/projects/audio-transcriber.html
@@ -52,7 +52,7 @@
             <span class="tech-badge">FFmpeg</span>
         </div>
 
-        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+        <p class="project-category"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <p style="font-size: 1.2rem; color: #b0b0b0; margin: 30px 0;">
             I built a custom Python pipeline that leverages Whisper AI with AMD GPU acceleration via DirectML. The architecture is purposefully restrictive - targeting only AMD Radeon RX 6000/7000/8000 series GPUs on Windows to maximize DirectML optimization. My implementation handles long-form audio (30+ minutes) through intelligent chunking and achieves 3-5x speedup over CPU processing.
