--- a/projects/file-scanner.html
+++ b/projects/file-scanner.html
@@ -38,7 +38,7 @@
         
         <h1 style="color: #ff4444; margin-bottom: 20px;">🔍 File Scanner</h1>
         
-        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+        <p class="project-category"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <div class="tech-stack">
             <span class="tech-badge">.NET Framework</span>
