--- a/projects/image-upscaler.html
+++ b/projects/image-upscaler.html
@@ -109,7 +109,7 @@
         
         <h1 style="color: #ff4444; margin-bottom: 20px;">🎨 AI Image Upscaler</h1>
         
-        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project</p>
+        <p class="project-category"><strong>Project Category:</strong> Individual Project</p>
 
         <div class="tech-stack">
             <span class="tech-badge">Python 3.13</span>
