--- a/projects/subtitle-extractor.html
+++ b/projects/subtitle-extractor.html
@@ -48,7 +48,7 @@
             <span class="tech-badge">Batch Automation</span>
         </div>
 
-        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+        <p class="project-category"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <p style="font-size: 1.2rem; color: #b0b0b0; margin: 30px 0;">
             I built a smart Python wrapper around FFmpeg that implements intelligent fallback logic: check for subtitles → extract if found → fallback to MP3 audio if not. My design philosophy: <strong>never fail empty</strong> - always produce usable output regardless of input video structure.
