--- a/projects/video-upscaler.html
+++ b/projects/video-upscaler.html
@@ -53,7 +53,9 @@
             <span class="tech-badge">OpenCV</span>
             <span class="tech-badge">Vulkan</span>
             <span class="tech-badge">Python 3.13</span>
-        </div>\n\n        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+        </div>
+
+        <p class="project-category"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <p style="font-size: 1.2rem; color: #b0b0b0; margin: 30px 0;">
             I engineered a frame-by-frame video upscaling pipeline optimized for AMD GPUs on Windows. My architecture supports dual AI methods (Real-ESRGAN GAN-based vs EDSR CNN-based), implements AMD VCE hardware encoding with automatic CPU fallback for high-resolution outputs (>4000px), and processes videos sequentially to bypass VRAM limitations. The tool handles 30+ minute videos at 4x upscale (1080p  4K) while preserving audio tracks.
