--- a/projects/wingman.html
+++ b/projects/wingman.html
@@ -79,7 +79,7 @@
             <span class="tech-badge">SQLite</span>
         </div>
 
-        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Team Project (NUS Orbital Apollo 2025)</p>
+        <p class="project-category"><strong>Project Category:</strong> Team Project (NUS Orbital Apollo 2025)</p>
 
         <p style="font-size: 1.2rem; color: #b0b0b0; margin: 30px 0;">
             Local-first desktop AI assistant built with modern web technologies. Features task management, calendar integration, mood diary, and intelligent AI chat powered by Ollama. Cross-platform support with SQLite persistence and Supabase authentication.
