--- a/projects/unity-extractor.html
+++ b/projects/unity-extractor.html
@@ -49,7 +49,7 @@
             <span class="tech-badge">Batch Processing</span>
         </div>
 
-        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+        <p class="project-category"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <p style="font-size: 1.2rem; color: #b0b0b0; margin: 30px 0;">
             I built a command-line tool that automates texture extraction from Unity game files. My implementation uses UnityPy to parse proprietary Unity asset bundles, identifies Texture2D and Sprite objects, and converts them to standard PNG format. The tool supports batch processing with recursive directory scanning and maintains organized output structures.
