Add view counter to header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+                <div id="view-counter">
+                    <span class="count-label">Views:</span> <span id="count-value">...</span>
+                </div>
             </div>
         </nav>
     </header>
