Update resume certifications

--- a/resume.html
+++ b/resume.html
@@ -398,8 +398,7 @@
             <div class="sidebar-block">
                 <h3>Certifications & Awards</h3>
                 <div class="skill-group">
-                    <strong>Orbital Apollo (Advanced)</strong>
-                    National University of Singapore (2025)
+                    NUS Orbital Apollo 2025 (Advanced)
                 </div>
             </div>
         </aside>
